--- a/app/views/humans/_human.html.erb
+++ b/app/views/humans/_human.html.erb
@@ -3,7 +3,20 @@
   <div class="human__info">
     <p><%= human.human_type %></p>
   </div>
+  <% if local_assigns[:dna] %>
+  <table>
+    <tbody>
+      <% human.dna.split("\n") do |row| %>
+        <tr>
+          <%- row.chars.each do |value| %>
+            <td><%= value %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <% end %>
   <div class="human__actions">
-    <%= link_to "Edit", edit_human_path(human), class: "btn btn--secondary" %>
-    <%= link_to "Delete", human_path(human), data: { "turbo-confirm": "Are you sure?", "turbo-method": :delete }, class: "btn btn--danger" %>
+    <%= link_to "Alter human", edit_human_path(human), class: "btn btn--secondary" %>
+    <%= link_to "Destroy human", human_path(human), data: { "turbo-confirm": "Are you sure?", "turbo-method": :delete }, class: "btn btn--danger" %>
 </div>
