--- a/app/views/humans/edit.html.erb
+++ b/app/views/humans/edit.html.erb
@@ -1,8 +1,8 @@
 <main class="container">
-  <%= link_to(sanitize("&larr; Back to humans"), humans_path, class: "btn btn--secondary") %>
+  <%= link_to(sanitize("&larr; Human Catalog"), humans_path, class: "btn btn--secondary") %>
 
   <div class="header">
-    <h1>Edit Human</h1>
+    <h1>Altering this human...</h1>
   </div>
 
   <%= render "form" %>
