--- a/app/views/humans/index.html.erb
+++ b/app/views/humans/index.html.erb
@@ -2,8 +2,8 @@
   <div class="header">
     <h1>Humans</h1>
 
-    <%= link_to "Add a new human", new_human_path, class: "btn btn--primary" %>
+    <%= link_to "Create a new human", new_human_path, class: "btn btn--primary" %>
   </div>
 
-  <%= render @humans %>
+  <%= render @humans, dna: false %>
 </main>
