--- a/app/views/humans/new.html.erb
+++ b/app/views/humans/new.html.erb
@@ -1,8 +1,8 @@
 <main class="container">
-  <%= link_to(sanitize("&larr; Back to humans"), humans_path, class: "btn btn--secondary") %>
+  <%= link_to(sanitize("&larr; Human Catalog"), humans_path, class: "btn btn--secondary") %>
 
   <div class="header">
-    <h1>New Human</h1>
+    <h1>Creating a human...</h1>
   </div>
 
   <%= render "form" %>
