Move hardcoded values to configuration

--- a/app/views/humans/_form.html.erb
+++ b/app/views/humans/_form.html.erb
@@ -10,8 +10,8 @@
 
   <div class="matrix">
     <h2>DNA</h2> 
-    <%- (0..5).each do |i| %>
-      <%- (0..5).each do |j| %>
+    <%- (0...Rails.configuration.dna["rows"]).each do |i| %>
+      <%- (0...Rails.configuration.dna["cols"]).each do |j| %>
         <%= select_tag ("human[dna_matrix][#{i}][#{j}]"), options_for_select(["A","T","C", "G"], selected: @human.dna_matrix[i][j]) %>
       <%- end %>
       <br/>
