--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,7 +1,19 @@
 @import "tailwindcss";
 
+.header {
+  @apply flex justify-between items-center m-4;
+}
+
+h1 {
+  @apply text-4xl font-bold text-red-500;
+}
+
 .human-wrapper {
   @apply block;
+}
+
+.human-wrapper .human__name {
+  @apply w-1/3;
 }
 
 .human {
@@ -13,30 +25,95 @@
 }
 
 .human-label {
-  @apply text-sm font-bold;
-}
-
-.header {
-  @apply flex justify-between items-center m-4;
-}
-
-h1 {
-  @apply text-4xl font-bold text-red-500;
+  @apply text-xs font-bold;
 }
 
 a {
   @apply text-blue-500;
 }
 
-a.btn {
+.human-block .human__name a {
+  @apply text-4xl font-bold;
+}
+
+.human-block .human__info{
+  @apply w-1/2 rounded p-4 m-4 bg-gray-200;
+}
+
+.human-block .human__info span {
+  @apply text-4xl font-bold;
+}
+
+.human-block .human__info span {
+  @apply flex text-4xl font-bold justify-center;
+}
+
+table {
+  @apply w-1/2 m-4;
+}
+
+td {
+  @apply p-2 border border-gray-300;
+}
+.btn {
   @apply inline-flex bg-gray-200 text-black px-4 py-2 rounded;
 }
 
-a.btn img {
+.btn.btn--primary{
+  @apply bg-blue-200;
+}
+
+
+.btn.btn--secondary {
+  @apply bg-gray-200;
+}
+
+.btn.btn--danger{
+  @apply bg-red-200;
+}
+
+.btn img {
   @apply fill-current stroke-current px-2;
 }
 
-a.btn:hover {
+.btn:hover {
   @apply bg-red-500 text-white;
 }
 
+.btn.btn--danger:hover{
+  @apply bg-red-400;
+}
+
+.btn.btn--secondary:hover {
+  @apply bg-gray-400;
+}
+
+.btn.btn--primary:hover {
+  @apply bg-blue-400;
+}
+
+/* humans/new.html.erb */
+
+form {
+  @apply block m-6 p-4;
+}
+
+form label {
+  @apply block text-xs font-bold;
+}
+
+form input {
+  @apply block w-full p-2 border border-gray-300 rounded;
+}
+
+form .matrix {
+  @apply m-4;
+}
+
+h2 {
+  @apply text-2xl font-bold text-blue-500;
+}
+
+form select {
+  @apply p-1 border border-gray-300 rounded;
+}
